feat: section1を追加

--- a/report.tex
+++ b/report.tex
@@ -9,6 +9,11 @@
 \tableofcontents
 \clearpage
 \section{演習の目的}
+本演習は以下の目的で行う. 
+\begin{itemize}
+    \item PID制御のパラメータ調整を複数の方法を試行すること.
+    \item 机上の理論ではなく, 実務で有効な考慮点を習得すること.
+\end{itemize}
 \section{選択した調整方法での作業プロセス}
 \section{計測および各種計算等の結果}
 \section{結果}
