feat: section1を更新0202

--- a/report.tex
+++ b/report.tex
@@ -8,11 +8,18 @@
 \maketitle
 \tableofcontents
 \clearpage
-\section{演習の目的}
+\section{演習の目的・概要}
 本演習は以下の目的で行う. 
 \begin{itemize}
     \item PID制御のパラメータ調整を複数の方法を試行すること.
     \item 机上の理論ではなく, 実務で有効な考慮点を習得すること.
+\end{itemize}
+
+また, 本演習の概要を以下に示す.
+\begin{itemize}
+    \item 温度制御シュミレーターをターゲットにしたPIDによる温度制御を行う.
+    \item PID制御パラメータの調整を行う.
+    \item 創造特別実験IIの様に事前にパラメータは与えられないが, オートチューニングを使用して参考にするのは可能とする. 
 \end{itemize}
 \section{選択した調整方法での作業プロセス}
 \section{計測および各種計算等の結果}
